# hp-sp-26

./: .gitignore  ABOUT.md  Makefile  README.md
.github/workflows/: cli-release.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  dedalus_openclaw.py  deployments.py  modal_openclaw.py  terminal.py  uploads.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  deployment.py  session.py  user.py
backend/app/schemas/: deployment.py  user.py
backend/app/services/: auth.py  deploy.py  github_oauth.py  oauth_state.py  sandbox.py  sandbox_pool.py  terminal_sessions.py  uploads.py
backend/app/services/agents/: __init__.py  heuristics.py  prompts.py  tools.py
backend/scripts/: dedalus_openclaw.py  dump_openapi.py
backend/tests/: conftest.py  test_auth.py  test_deploy_service.py  test_deployments.py  test_health.py
cli/: package.json  plan.txt  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
cli/src/: cli.tsx
cli/src/commands/: delete.tsx  deploy.tsx  list.tsx  login.tsx  logout.tsx  open.ts  status.tsx  stop.tsx  whoami.tsx
cli/src/components/: AppShell.tsx  DeploymentDetails.tsx  DeploymentSummary.tsx  EnvSummary.tsx  (+8 more)
frontend/: index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml
frontend/src/: index.css  main.tsx
photon-backend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
photon-backend/src/: app.ts  server.ts  sessions.ts  spectrum.ts  terminal-client.ts
(+32 files in other folders)
