[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "dedalus-sdk>=0.1.0",
    "fastapi[standard]>=0.136.0",
    "modal>=1.4.2",
    "pydantic-settings>=2.6.0",
    "requests>=2.33.1",
    "sqlalchemy[asyncio]>=2.0.36",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
